--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ src/external/hmmer-2.3.2/squid/squid.h
 src/external/hmmer-2.3.2/squid/squidconf.h
 src/external/hmmer-2.3.2/src/config.h
 tags
+www/genomethreader.org/htdocs/distributions/gth-*
